@@ -98,6 +98,26 @@ class Menu {
 			this.menuData[this.cursor].addChar(String.fromCharCode(char));
 			this.sndKeyChar.play();
 		}
+		else {
+		//char navigation code
+		for (let i=this.cursor+1;i<this.menuData.length;i++) {
+		if (this.menuData[i].name.toLowerCase().substr(0,1)==String.fromCharCode(char).toLowerCase()) {
+		this.cursor=i;
+		this.menuData[this.cursor].speak();
+		this.first=false;
+				return;
+		}
+		}
+		for (let i=0;i<this.menuData.length;i++) {
+		console.log("ran second loop");
+				if (this.menuData[i].name.toLowerCase().substr(0,1)==String.fromCharCode(char).toLowerCase()) {
+		this.cursor=i;
+		this.menuData[this.cursor].speak();
+		this.first=false;
+		return;
+		}
+		}
+		}
 	}
 
 	removeCharacter() {
