@@ -12,7 +12,7 @@ combo:"Combo x%1!  + %2 points!",
 goLate:"Too late! You have %1 turns left.",
 goLater:"Too late, you pressed enter at %1 seconds. You have %2 turns left.",
 goEarly:"Too early! you pressed enter at %1 seconds. You have %2 turns left.",
-goExact:"Very good! You pressed at exactly 3 seconds. 1 extra turn + 1000 points!",
+goExact:"Very good! You pressed at exactly 3 seconds. 1 extra turn + 2000 points!",
 goOk:"ok, not bad. You pressed enter at %1 seconds. You get %2 points! You have %3 turns left.",
 goOver:"Game over! You scored %1 points, in %2 turns. Do you think you can do better next time?",
 goIntro:"Are you ready to play ready set go? When you hear the countdown, press space when you think 3 seconds have passed!",
@@ -242,7 +242,7 @@ mEdit:"Pack Editor",
 			buygame:"Do  you want to buy %1 for %2 beatcoins?",
 			bet:"Please place your bet with the left and right arrow keys and press enter when you have decided.",
 			nogame:"You don't have the required %1 beatcoins for this game, you only have %2.",
-			mainmenu:"main menu: arrow keys to select options, page up and page down raise and lower the music volume.",
+			mainmenu:"main menu: arrow keys to select options, page up and page down raise and lower the music volume. You can also use the first letter of an option to move to it",
 			mSelect:"Please select",
 			mSafeSelect:"Please select, with the right and left arrow keys, how many safeguards you want to buy and press enter.",
 			level:"Level %1",
@@ -300,7 +300,7 @@ mEdit:"Pack Editor",
 				goLater:"Demasiado tarde! Has pulsado enter a los %1 segundos... Te quedan %2 turnos.",
 				goEarly:"Demasiado pronto! has pulsado enter a los %1 segundos... Te quedan %2 turnos.",
 				goOk:"Bueno, ok. Has pulsado a los %1 segundos. Ganas %2 puntos! Te quedan %3 turnos.",
-				goExact:"Bien! Has pulsado a los 3 segundos exactos! Turno extra y 1000 puntos!",
+				goExact:"Bien! Has pulsado a los 3 segundos exactos! Turno extra y 2000 puntos!",
 		goIntro:"Preparado para jugar a preparados listos ya? cuando oigas el contador, pulsa espacio a la de tres!",
 			newUpdate:"Hay una nueva versión disponible! Tienes la %1 y la %2 está disponible.",
 			macwarning:"Atención: En un mac, por favor pulsa control opción  flecha izquierda seguido de control opción derecha o no tendrás voz.",
@@ -548,7 +548,7 @@ achhpongfail:"Juega a reacciona y consigue 0 teclas correctas y al menos una inc
 			mBrowseUnlocked: 'Cambiar a otro pack comprado',
 			mHashes: 'Reconstruir base de datos de packs',
 			codescracked:"Has podido desbloquear %1 códigos, con %2 acciones diferentes!",
-			mainmenu:"menú principal: flechas arriba y abajo para seleccionar opciones, avanzar y retroceder página para subir y bajar la música",
+			mainmenu:"menú principal: flechas arriba y abajo para seleccionar opciones, avanzar y retroceder página para subir y bajar la música. también puedes usar la primera letra de una opción para moverte a ella.",
 			mSelect:"Por favor selecciona",
 			mSafeSelect:"Por favor selecciona, con las flechas izquierda y derecha, cuántos antifallos quieres y pulsa enter.",
 			mSafeguards:"Comprar antifallos (ahora %1)",
