@@ -1,3 +1,2 @@
 Make tutorial for react and gogame
 achievements for goGame
-fix the scoring mechanism.
